[metadata]
name = grill-names
version = 2.4.0
description = Name objects for digital content creation.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = naming convention cg
author_email = chris.gfz@gmail.com
author = Christian López Barrón
url = https://github.com/thegrill/grill-names
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires = naming>=0.6
packages = find_namespace:

[options.packages.find]
include = grill.*

[options.package_data]
grill.tokens.ids = *.cfg

[options.extras_require]
# use a custom version of sphinx to workaround https://github.com/thegrill/grill-names/issues/6
docs = sphinx_autodoc_typehints; sphinx_rtd_theme; sphinx-toggleprompt; sphinx-copybutton; sphinx-togglebutton; m2r2; sphinx @ git+https://github.com/thegrill/sphinx.git@grill-intersphinx-uniqueref-fix
