[metadata]
name = grill-names
version = 2.6.1
description = Name objects for digital content creation.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = naming convention cg
author_email = chris.gfz@gmail.com
author = Christian López Barrón
url = https://github.com/thegrill/grill-names
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
install_requires = naming>=0.6
packages = find_namespace:

[options.packages.find]
include = grill.*

[options.package_data]
grill.tokens.ids = *.cfg

[options.extras_require]
# docs dependencies install:
# conda install --channel conda-forge pygraphviz
# python -m pip install sphinx myst-parser sphinx-toggleprompt sphinx-copybutton sphinx-togglebutton sphinx-hoverxref sphinx_autodoc_typehints shibuya
# shibuya 2024.2.21 did not have the problem with the tables
# See:
#   https://github.com/readthedocs/sphinx_rtd_theme/pull/1218
#   https://github.com/readthedocs/sphinx_rtd_theme/issues/1179
#   https://github.com/readthedocs/sphinx_rtd_theme/issues/117
docs = sphinx; myst-parser; sphinx-toggleprompt; sphinx-copybutton; sphinx-togglebutton; sphinx-hoverxref; sphinx_autodoc_typehints; shibuya==2024.4.4
