[metadata]
name = grill-names
version = 2.6.1
description = Name objects for digital content creation.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = naming convention cg
author_email = chris.gfz@gmail.com
author = Christian López Barrón
url = https://github.com/thegrill/grill-names
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
install_requires = naming>=0.6
packages = find_namespace:

[options.packages.find]
include = grill.*

[options.package_data]
grill.tokens.ids = *.cfg

[options.extras_require]
# dev install:
# conda create -n dev-grill-names python=3.13 python-freethreading python-jit -c conda-forge
# conda activate dev-grill-names
# conda install conda-forge::graphviz
# python -m pip install -e .[docs]
docs = sphinx; myst-parser; sphinx-toggleprompt; sphinx-copybutton; sphinx-togglebutton; sphinx-hoverxref; shibuya
